# accern-xyme

./: .eslintrc.js  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  MANIFEST.in  Makefile  README.rst  install.sh  mypy.ini  package.json  requirements.lint.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tsconfig.json
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: python-app.yaml  sonar.yaml  types.yaml  typescript.yaml
.husky/: pre-commit
.scannerwork/: report-task.txt
.yalc/accern-xyme/: LICENSE  package.json  yalc.sig
accern_xyme/: __init__.py  __main__.py  accern_xyme.py  api_endpoints.txt  kafka.py  legacy.py  pipeline.py  types.py  util.py
accern_xyme/v2/: __init__.py  legacy.py  util.py
accern_xyme/v3/: __init__.py  accern_xyme.py  types.py
docs/: v4.0.5.md
src/accern_xyme/: __init__.py
stubs/IPython/: display.pyi
stubs/RestrictedPython/: __init__.pyi
stubs/boto3/: __init__.pyi  exceptions.pyi
stubs/confluent_kafka/: __init__.pyi
stubs/confluent_kafka/admin/: __init__.pyi
stubs/dvc/api/: __init__.pyi
stubs/graphviz/: __init__.pyi
stubs/graphviz/backend/: __init__.pyi
stubs/matplotlib/: figure.pyi  pyplot.pyi
stubs/numpy/: __init__.pyi
stubs/numpy/core/: _internal.pyi
stubs/numpy/random/: __init__.pyi
stubs/pandas/: __init__.pyi
stubs/pandas/_config/: display.pyi
stubs/pandas/core/: api.pyi  frame.pyi
stubs/pandas/io/: api.pyi  common.pyi  packers.pyi
stubs/setuptools/: __init__.pyi
stubs/torch/: __init__.pyi
(+16 files in other folders)
