[metadata]
name = accern_xyme
version = attr: accern_xyme.__version__
description = AccernXYME is a library for easily accessing XYME via python.
long_description = file: README.rst
url = https://github.com/Accern/accern-xyme
author = Accern Corp.
author_email = josua.krause@accern.com
keywords = XYME AI machine learning client
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3

[options]
package_dir=
    =.
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.17.3
    pandas>=0.25.3
    quick-server>=0.7.14
    requests>=2.22.0
    RestrictedPython>=5.0
    scipy>=1.4.1
    torch>=1.5.1
    typing-extensions>=3.7.4.1

[options.packages.find]
where=.

[options.data_files]
package_data =
    accern_xyme/py.typed

[darglint]
docstring_style = google
enable_disabled = DAR104
strictness = short
